@@ -1,0 +1,1 @@
+debian/dnsmasq.runscript name=dnsmasq,logscript,since=2.80-1+runit
