@@ -11,6 +11,7 @@ dnsmasq (2.81-1) unstable; urgency=low
      only one of the interfaces. (closes: #949565)
    * Fix breakage of dig +trace. (closes: #942363)
    * Fix build faliure with newer Nettle libraries. (closes: #940985)
+   * Support runscript init-system (closes: #929884)
 	
  -- Simon Kelley <simon@thekelleys.org.uk>  Mon, 27 Jan 2020 22:31:15 +0000
 
